# MazeRunner

./: .coveragerc  .flake8  .gitignore  .gitmodules  Jenkinsfile  Makefile  README.md  coverage.xml  install.bat  pytest.ini  requirements.txt
.github/workflows/: codeql-analysis.yml  pythonapp.yml
Framework/ComEmu/: ConEmu.map  ConEmu.xml  ConEmu64.map
Framework/Control/: maze_control.py  maze_control_support.py
Framework/DotMatrix/: dotmatrix.py  opc.py
Framework/Generator/: MazeGeneratorClient.py  maze_generator_algo.py
Framework/GeneratorAlternative/: MazeGeneratorClient.py  base.py  example.py  maze.py  readme.md  utils.py
Framework/MQTTBroker/: README.md
Framework/Test/: broker_test.py  control_test.py  maze_generator_test.py  readme.md  run_broker_test.bat  test_broker.py  test_control.py  test_maze_generator.py  test_maze_generator2.py  test_mqtt_client.py  test_mqtt_publisher.py  test_mqtt_subscriber.py
Framework/Test_obsolete/: broker_test.py
Framework/Visualizer/: maze_visualize.py  mqtt_pub.py  mqtt_sub.py  (+1 more)
MazeExamples/: maze1.txt  maze1_broken.txt  maze1_solvetest.txt  maze2.txt  maze3.txt  spiral1.txt  susanna1.txt  susanna2.txt
Teams/ReferenceSolutionAStarCPP/: CMakeLists.txt  README.md  astar_linux.patch
Teams/ReferenceSolutionAStarCPP/src/: astarwrapper.cpp
Teams/ReferenceSolutionAStarCPP/tests/: test_basic.py
Teams/astar_cpp/: CMakeLists.txt  mqtt_client.c  subscribe.cpp
Teams/astar_cpp/Astar-Maze-Solver/: astar_maze.cpp
Teams/astar_cpp/samples/: async_publish.cpp
_misc/: MazeSolverBreadthFirst_java.7z
docker/: Dockerfile  Makefile
docs/: readme_codecov.md
jenkins/: docker-compose.yml  mosquitto.conf
robotframework/: AStarSolverLibrary.py  BrokerLibrary.py  GeneratorLibrary.py  MazeGuiLibrary.py  end2end_astar.robot  end2end_breadthfirst.robot  keyword_driven.robot  remoteserver.py  requirements.txt  unit_test.robot
(+163 files in other folders)
